[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/visual/UI.gd" type="Script" id=1]
[ext_resource path="res://scripts/visual/CommandLine.gd" type="Script" id=2]
[ext_resource path="res://scripts/node/Interpreter.gd" type="Script" id=3]
[ext_resource path="res://scripts/visual/SideBar.gd" type="Script" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Interpreter" type="Node" parent="."]
script = ExtResource( 3 )

[node name="ErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -29.0
margin_right = 41.5
margin_bottom = 29.0
window_title = "Error!"

[node name="BottomPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.001
anchor_bottom = 1.0
margin_top = -99.9999
margin_right = -0.0240479
margin_bottom = 0.00012207
rect_min_size = Vector2( 0, 100 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CommandLine" type="LineEdit" parent="BottomPanel"]
anchor_top = 1.0
anchor_right = 1.001
anchor_bottom = 1.0
margin_top = -123.0
margin_right = -0.0240479
margin_bottom = -99.0001
rect_min_size = Vector2( 0, 23 )
placeholder_text = "Type command here..."
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Output" type="Label" parent="BottomPanel"]
anchor_right = 1.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Control" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -215.0
margin_bottom = -123.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideBar" type="Control" parent="."]
anchor_bottom = 1.0
margin_right = 124.0
margin_bottom = -122.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SideBar"]
anchor_bottom = 1.0
margin_right = 124.0
color = Color( 0.145098, 0.145098, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="SideBar"]
anchor_bottom = 1.0
margin_right = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="SideBar/VBox"]
margin_right = 124.0
margin_bottom = 20.0
text = "Save"

[node name="Button2" type="Button" parent="SideBar/VBox"]
margin_top = 24.0
margin_right = 124.0
margin_bottom = 44.0
text = "Load"

[node name="Button3" type="Button" parent="SideBar/VBox"]
margin_top = 48.0
margin_right = 124.0
margin_bottom = 68.0
text = "Test limits"

[node name="Button4" type="Button" parent="SideBar/VBox"]
margin_top = 72.0
margin_right = 124.0
margin_bottom = 92.0
text = "Add random"

[node name="HSeparator3" type="HSeparator" parent="SideBar/VBox"]
margin_top = 96.0
margin_right = 124.0
margin_bottom = 100.0

[node name="Label2" type="Label" parent="SideBar/VBox"]
margin_top = 104.0
margin_right = 124.0
margin_bottom = 118.0
text = "Action"

[node name="ActionList" type="ItemList" parent="SideBar/VBox"]
margin_top = 122.0
margin_right = 124.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 58 )
items = [ "Select", null, false, "Add jar", null, false, "Put down", null, false ]

[node name="HSeparator" type="HSeparator" parent="SideBar/VBox"]
margin_top = 184.0
margin_right = 124.0
margin_bottom = 188.0

[node name="Label" type="Label" parent="SideBar/VBox"]
margin_top = 192.0
margin_right = 124.0
margin_bottom = 206.0
text = "Jar format"

[node name="JarFormatList" type="ItemList" parent="SideBar/VBox"]
margin_top = 210.0
margin_right = 124.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 58 )
items = [ "BigJar", null, false, "MediumJar", null, false, "SmallJar", null, false, "SpiceJar", null, false, "Bottle", null, false ]

[node name="HSeparator2" type="HSeparator" parent="SideBar/VBox"]
margin_top = 272.0
margin_right = 124.0
margin_bottom = 276.0

[node name="ObjIdLabel" type="Label" parent="SideBar/VBox"]
margin_top = 280.0
margin_right = 124.0
margin_bottom = 294.0
text = "Selected:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grabbed" type="Label" parent="SideBar/VBox"]
margin_top = 298.0
margin_right = 124.0
margin_bottom = 312.0
text = "Grabbed:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="BottomPanel/CommandLine" to="." method="_on_CommandLine_focus_entered"]
[connection signal="focus_exited" from="BottomPanel/CommandLine" to="." method="_on_CommandLine_focus_exited"]
[connection signal="text_entered" from="BottomPanel/CommandLine" to="." method="_on_CommandLine_text_entered"]
[connection signal="button_up" from="SideBar/VBox/Button" to="SideBar" method="_on_Button_button_up"]
[connection signal="button_up" from="SideBar/VBox/Button2" to="SideBar" method="_on_Button2_button_up"]
[connection signal="button_up" from="SideBar/VBox/Button3" to="SideBar" method="_on_Button3_button_up"]
[connection signal="button_up" from="SideBar/VBox/Button4" to="SideBar" method="_on_Button4_button_up"]
[connection signal="item_selected" from="SideBar/VBox/ActionList" to="SideBar" method="_on_ActionList_item_selected"]
[connection signal="item_selected" from="SideBar/VBox/JarFormatList" to="SideBar" method="_on_ItemList_item_selected"]
